[package]
name = "db"
version = "0.1.0"
edition = "2021"
description = "A library that handles database processing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sobriodev/mint"
readme = "../README.md"
keywords = ["database"]
categories = ["database"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
clap = { version = "3.1.0", features = ["derive"] }
more-asserts = "0.2.2"
tempdir = "0.3.7"
mockall = "0.11.0"
mockall_double = "0.2.1"
cfg-if = "1.0.0"